--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -18,38 +18,38 @@
 		tools:listitem="@layout/message_item"/>
 
 	<RelativeLayout
+		android:id="@+id/content_message"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:id="@+id/content_message"
 		android:layout_alignParentBottom="true"
-		android:background="#fff"
-		android:padding="2dp">
+		android:background="@color/material_white_1000"
+		android:padding="5dp">
 
 		<ImageView
-			android:layout_width="40dp"
-			android:layout_height="40dp"
 			android:id="@+id/buttonAttachements"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
 			android:layout_alignParentStart="true"
 			android:layout_centerVertical="true"
-			android:padding="4dp"
-			android:src="@drawable/ic_attachment"/>
+			android:contentDescription="send attachment"
+			android:src="@drawable/fragment_chat_ic_attachment"/>
 
 		<EditText
+			android:id="@+id/editTextMessage"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:id="@+id/editTextMessage"
 			android:layout_toStartOf="@+id/buttonMessage"
 			android:layout_toEndOf="@+id/buttonAttachements"
+			android:inputType="text"
 			android:hint="Enter message"/>
 
 		<ImageView
-			android:layout_width="40dp"
-			android:layout_height="40dp"
 			android:id="@+id/buttonMessage"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
 			android:layout_alignParentEnd="true"
 			android:layout_centerVertical="true"
-			android:onClick="sendMessage"
-			android:padding="4dp"
+			android:contentDescription="send message"
 			android:src="@android:drawable/ic_menu_send"/>
 	</RelativeLayout>
 
