--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
@@ -23,9 +24,9 @@
         android:layout_margin="10dp"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
-        android:contentDescription="settings"
         android:focusable="true"
-        android:src="@drawable/nav_header_settings_icon_dark" />
+        android:src="@drawable/nav_header_settings_icon_dark"
+        tools:ignore="ContentDescription"/>
 
     <ImageView
         android:id="@+id/signed_in_user_image_view"
@@ -33,8 +34,8 @@
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:contentDescription="user avatar"
-        android:src="@drawable/default_avatar"/>
+        android:src="@drawable/default_avatar"
+        tools:ignore="ContentDescription"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="User Name"
+            android:text="@string/default_name"
             android:id="@+id/signed_in_username_tv"
             android:textColor="@android:color/white"
             android:textSize="25sp"/>
@@ -58,7 +59,6 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
             android:id="@+id/user_facebookID"
-            android:text="IDK"
             android:textSize="18sp"/>
 
         <LinearLayout
@@ -71,15 +71,15 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginTop="10dp"
-                android:contentDescription="header like"
-                android:src="@drawable/nav_header_heart_icon" />
+                android:src="@drawable/nav_header_heart_icon"
+                tools:ignore="ContentDescription"/>
 
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="10dp"
-                android:contentDescription="idk"
-                android:src="@drawable/nav_header_hype_grid" />
+                android:src="@drawable/nav_header_hype_grid"
+                tools:ignore="ContentDescription"/>
 
         </LinearLayout>
 
