--- a/app/src/main/res/layout/fragment_feed_item.xml
+++ b/app/src/main/res/layout/fragment_feed_item.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="feedItem"
-            type="com.mmdev.meetups.models.FeedItem" />
+            type="com.mmdev.meetapp.models.FeedItem" />
     </data>
 
     <androidx.cardview.widget.CardView
