--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="profileViewModel"
-            type="com.mmdev.meetapp.ui.main.ProfileViewModel" />
+            type="com.mmdev.meetapp.ui.ProfileViewModel" />
     </data>
 
 
